--- a/index.html
+++ b/index.html
@@ -1,20 +1,18 @@
 <HTML>
 <HEAD>
-<TITLE>Danny4</TITLE>
-<TITLE>Danny2</TITLE>
+<TITLE>Jenkins Demo</TITLE>
 </HEAD>
 <BODY BGCOLOR="FFFFFF">
-<CENTER><IMG SRC="https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=0ahUKEwiu4dP4tNXWAhXHgFQKHaiWB4MQjRwIBw&url=https%3A%2F%2Fen.wikipedia.org%2Fwiki%2FCloud&psig=AOvVaw02uToI0BNgBAFRWS08b5uh&ust=1507153094278835" ALIGN="BOTTOM"> </CENTER>
 <HR>
-<a href="http://www.rig.net">Rig.net</a>
-is a link to our home site.
-<H1>This is a Header</H1>
-<H2>This is a Medium Header</H2>
+<a href="https://jenkins.dev.rig.net">jenkins.dev.rig.net</a>
+Open a link to view Jenkins.
+<H1>Demo page</H1>
+<H2>Now we can beging to write code</H2>
 Send me mail at <a href="mailto:daniel.graves@rig.net">
 daniel.graves@rig.net</a>.
 <P> Deploy scripts in action
 <P> <B>Testing the deploy scripts to view changes</B>
-<BR> <B><I>Let's change this line a few times to watch the changes1.</I></B>
+<BR> <B><I>Let's change this line a few times to watch the changes.</I></B>
 <HR>
 </BODY>
 </HTML>
